plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '8.4.0'
}


spotless {
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
		eclipse().configFile("src/main/resources/eclipse-java-formatter.xml")
		leadingTabsToSpaces(4)
		importOrder('java', 'javax', 'org', 'com', '')
		removeUnusedImports()
		endWithNewline()
		trimTrailingWhitespace()
	}
	groovyGradle {
		target '*.gradle'
		greclipse()
	}
}

group = 'team.themoment'
version = 'v20251103.0'
java.toolchain { languageVersion = JavaLanguageVersion.of(25) }

java {
	sourceCompatibility = '25'
}

jar {
	enabled = false
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	/** spring app **/
	implementation 'org.springframework.boot:spring-boot-starter-web'

	/** security **/
	implementation 'org.springframework.session:spring-session-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	/** oauth 2.0 **/
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	/** persistence **/
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	runtimeOnly 'com.mysql:mysql-connector-j'

	/** queryDsl **/
	implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
	annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	/** test **/
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-inline:5.2.0'

	/** validation **/
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	/** lombok **/
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	/** aws **/
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:4.0.0'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-sns:4.0.0'

	/** excel **/
	implementation 'org.apache.poi:poi-ooxml:5.5.1'

	/** json **/
	implementation 'net.minidev:json-smart:2.6.0'

	/** swagger **/
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

	/** actuator **/
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	/** micrometer **/
	implementation 'io.micrometer:micrometer-registry-prometheus'

	/** logging **/
	implementation platform('software.amazon.awssdk:bom:2.42.30')
	implementation 'software.amazon.awssdk:cloudwatchlogs'

	/** open feign **/
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	/* sdk */
	implementation("com.github.themoment-team:the-sdk:1.5")

	/* disender */
	implementation 'io.github.zaman0806:disender-spring-boot-4-starter:0.1.1'
}

ext {
	set('springCloudVersion', "2025.1.1")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

def querydslSrcDir = "$projectDir/build/generated"

clean {
	delete file(querydslSrcDir)
}

tasks.withType(JavaCompile).configureEach {
	options.generatedSourceOutputDirectory = file(querydslSrcDir)
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	useJUnitPlatform()
}

configurations.configureEach {
	exclude group: 'org.bouncycastle'
}

compileJava.dependsOn spotlessApply
compileTestJava.dependsOn spotlessApply
